--- a/trunk/datapack_development/data/html/default/30600.htm
+++ b/trunk/datapack_development/data/html/default/30600.htm
@@ -2,7 +2,7 @@
 If you need advice, do not hesitate to ask me! I will do my very best to help you.<br>
 <a action="bypass -h npc_%objectId%_Chat 1">Ask for advice.</a><br>
 <a action="bypass -h npc_%objectId%_Quest 8001_NpcLocationInfo">NPC Location Information.</a><br>
-Receive blessing of protection. [not done yet]<br>
+<a action="bypass -h npc_%objectId%_Link default/BlessingOfProtection.htm">Receive blessing of protection.</a><br>
 <a action="bypass -h npc_%objectId%_Chat 12">Ask about the Newbie Travel Token.</a><br>
 <a action="bypass -h npc_%objectId%_Quest 1104_NewbieTravelToken">Teleport using the Newbie Travel Token.</a><br>
 <a action="bypass -h npc_%objectId%_Link default/SupportMagic.htm">Receive help from beneficial magic.</a><br>
