--- a/trunk/datapack_development/data/html/seven_signs/blkmrkt_1.htm
+++ b/trunk/datapack_development/data/html/seven_signs/blkmrkt_1.htm
@@ -1,11 +1,11 @@
 <html><body>Black Marketeer of Mammon:<br>
-The Lords of Dawn and the Army of Dusk are now using <font color="LEVEL">ancient adena</font> coins as currency, saying they are preserving the customs of the old empire.<br>
-Tradition and custom! Bah! I've nothing against them, you understand, but what's the use of those old and outdated coins in today's world? Try using them to buy something at any market -- you'll be in for a rude surprise! Don't you agree?<br>
-Say, do you have any of those worthless old adenas? As a personal favor, I'll be happy to take them off your hands.<br>
-Oh yes... if that special ability attached to your weapon is creating some kind of problem for you, I can even remove it. Personally, I don't really understand why in the world you'd want to remove it after what you went through to gain it in the first place, but mine is not to reason why. Just say the word and I'll take care of it.<br>
-Other than that, we have some rare and unique things available for purchase here, so please have a look around. I must warn you, though -- these are hard-to-get items. I'd advise you buy whatever you can.<br> 
-<a action="bypass -h npc_%objectId%_Link seven_signs/blkmrkt_2.htm">Exchange Ancient Adena for adena.</a><br>
-<a action="bypass -h npc_%objectId%_multisell 310922002">Make a transaction for black market goods.</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 310922001">Remove the weapon's special ability.</a><br>
+Out of respect for the traditions of the old empire, both the Lords of Dawn and the Revolutionaries of Dusk use <font color="LEVEL">Ancient Adena</font> as their currency.<br>
+Certainly, traditions and customs are important, but in this day and age... If you go to the market with those ancient coins, you won't be able to buy anything! Right?<br>
+Say, do you have any Ancient Adena weighing down your purse? I can help you.<br>
+Also, if your weapon carries a special capability you no longer want, I can remove it. No questions asked!<br>
+I also carry rare goods that you won't find anywhere else. Stop by and see for youself some time. You might just find a once-in-a-lifetime deal...<br>
+<a action="bypass -h npc_%objectId%_Link seven_signs/blkmrkt_2.htm">Exchange Ancient Adena for Adena.</a><br>
+<a action="bypass -h npc_%objectId%_multisell 310922002">Buy black market goods.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 310922001">Remove a weapon's special ability.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest.</a>
 </body></html>
