--- a/trunk/datapack_development/data/html/seven_signs/blkmrkt_2.htm
+++ b/trunk/datapack_development/data/html/seven_signs/blkmrkt_2.htm
@@ -1,5 +1,5 @@
 <html><body>Black Marketeer of Mammon:<br>
-<font color="LEVEL">[Exchange Ancient Adena for adena]</font><br>
+<font color="LEVEL">[Exchange Ancient Adena for Adena]</font><br>
 Enter the amount of Ancient Adena you wish to exchange.<br>
-<td align=left><edit var="amount" width=100></td><button value="Exchange" action="bypass -h npc_%objectId%_SevenSigns 7 $amount" back="L2UI.DefaultButton_click" fore="L2UI.DefaultButton" width=67 height=19>
+<td align=left><edit var="amount" width=100></td><button value="Exchange" action="bypass -h npc_%objectId%_SevenSigns 7 $amount" back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DD" width=80 height=27>
 </body></html>
