HTML,SQL: Merchants in starting villages changes

--- a/trunk/datapack_development/data/html/merchant/30002-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30002-sold.htm
@@ -1,10 +1,9 @@
 <html><body>Trader Jackson:<br>
-Thank you. I'll be making good use of the things you've sold. Please come back if you come across more good items.<br>
-<a action="bypass -h npc_%objectId%_Buy 3000200">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3000201">Buy Mystic equipment.</a><br>
+Thank you! I know that what you sold me will come in handy. If you ever have something else that nice, please come see me.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 11">Wear Warrior equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 12">Wear Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000200">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000201">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
