--- a/trunk/datapack_development/data/html/merchant/30002.htm
+++ b/trunk/datapack_development/data/html/merchant/30002.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Jackson:<br>
-Come on in! What are you looking for? We have many fine items, so take a look around. Remember, it always pays to buy the best armor and weapons possible -- your battles will become so much easier.<br>
-<a action="bypass -h npc_%objectId%_Buy 3000200">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3000201">Buy Mystic equipment.</a><br>
+Welcome! What are you looking for? I have a wide selection of high quality items. Have a look around! Here's a tip: if you can afford to do so, buy only the best armor and weapons. Doing so will dramatically increase your combat effectiveness.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3000200">Wear Warrior equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3000201">Wear Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000200">Try on Fighter Equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000201">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
