--- a/trunk/datapack_development/data/html/merchant/30003.htm
+++ b/trunk/datapack_development/data/html/merchant/30003.htm
@@ -1,9 +1,9 @@
 <html><body>Trader Silvia:<br>
-Excuse me. If you've made your selection, hurry up and buy it. Because of you, I have less time for cultivating my beauty. I don't know why my aunt makes me do this<br>
+Hey! If you know what you want, buy it quickly. I'm not getting any prettier waiting on you, that's for sure. I don't know why my aunt even asked me to do such a thing...<br>
 <a action="bypass -h npc_%objectId%_Buy 3000300">Buy Accessories</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3000301">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
