--- a/trunk/datapack_development/data/html/merchant/30135-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30135-bought.htm
@@ -1,10 +1,9 @@
 <html><body>Trader Iria:<br>
 Thanks anyway. Hope you earn a lot of money.<br>
-<a action="bypass -h npc_%objectId%_Buy 3013500">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3013501">Buy Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3013500">Wear Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3013501">Wear Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3013500">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3013501">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
