--- a/trunk/datapack_development/data/html/merchant/30136-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30136-bought.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Payne:<br>
 Thank you very much. Please stop by when you pass<br1>
 down this road again.<br>
-<a action="bypass -h npc_%objectId%_Buy 3013600">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3013601">Buy Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013600">Wear Fighter equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013601">Wear Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
