--- a/trunk/datapack_development/data/html/merchant/30149-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30149-sold.htm
@@ -6,5 +6,5 @@ will buy them.<br>
 <a action="bypass -h npc_%objectId%_Buy 3014901">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange weapon</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
