--- a/trunk/datapack_development/data/html/merchant/30149.htm
+++ b/trunk/datapack_development/data/html/merchant/30149.htm
@@ -1,9 +1,9 @@
 <html><body>Trader Creamees:<br>
-Welcome, friend. Is not the fragrance of the herbs nice? My young friend Herbiel seems to be compounding a new secret medicine. You're under the obligation to buy, just look around -- there may be something that you need.<br>
+Welcome, brother! Ah, the herbs smell wonderful, don't they? My young friend Herbiel is making a new secret potion. Why don't you take a look? Perhaps you will find something you need...<br>
 <a action="bypass -h npc_%objectId%_Buy 3014900">Buy Accessories</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3014901">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange weapon</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
