--- a/trunk/datapack_development/data/html/merchant/30517.htm
+++ b/trunk/datapack_development/data/html/merchant/30517.htm
@@ -1,13 +1,12 @@
 <html><body>Trader Shari:<br>
-Sisters! Brothers! Check out these wares!<br>
-Expensive? Don't you know that Dwarven products are in high demand, and even more expensive in other shops?<br>
-Of course, if you prefer junk ...<br>
-<a action="bypass -h npc_%objectId%_Buy 3051700">"I want to buy Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3051701">"I want to buy Wizard equipment."</a><br>
+Greetings, friend! Here, take a look at these...<br>
+Too expensive?! Don't you know that Dwarven-made items command a premium?!<br>
+Eh, that's why I can't stand you country bumpkins...<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3051700">"I want to try on Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3051701">"I want to try on Wizard equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3051700">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3051701">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and Tax Rate Information</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
