--- a/trunk/datapack_development/data/html/merchant/30519.htm
+++ b/trunk/datapack_development/data/html/merchant/30519.htm
@@ -3,7 +3,7 @@
 <a action="bypass -h npc_%objectId%_Buy 3051900">Buy supplies and minerals.</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3051901">Purchase every type of blueprint.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the Lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">View information about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
