--- a/trunk/datapack_development/data/html/merchant/30558-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30558-sold.htm
@@ -1,11 +1,9 @@
 <html><body>Trader Jakal:<br>
-You're awesome! The coolest adventurers never hesitate! Hahaha!!<br>
-<font color=LEVEL">Tejakar Pa'agrio!</font><br>
-<a action="bypass -h npc_%objectId%_Buy 3055800">"I want to buy Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3055801">"I want to buy Wizard equipment."</a><br>
+You are very wise, my friend! May Pa'agrio smile on your efforts!<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055800">"I want to try on Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055801">"I want to try on Wizard equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055800">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055801">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
