--- a/trunk/datapack_development/data/html/merchant/32165.htm
+++ b/trunk/datapack_development/data/html/merchant/32165.htm
@@ -1,12 +1,11 @@
 <html><body>Trader Zakone:<br>
-Welcome! See something you like?<br>
-The importance of strong armor cannot be stressed enough when fighting monsters. Ah, of course, I've never met monsters personally, you understand, but common sense tells me that that must be the case...<br>
-<a action="bypass -h npc_%objectId%_Buy 3216500">Buy warrior equip.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3216501">Buy magician equip.</a><br>
+Please come in! Now then, what would you like?<br>
+It's very important to have strong armor before challenging your enemies. Ah, naturally I don't know anything about your enemies specifically...<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3216500">Try the warrior equip on.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3216501">Try the magician equip on.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3216500">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3216501">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell.</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">View information on the local lord and manor tax rate.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest.</a>
 </body></html>
