--- a/trunk/datapack_development/data/html/merchant/30001-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30001-bought.htm
@@ -6,5 +6,5 @@ Thank you. Come again.<br>
 <a action="bypass -h npc_%objectId%_Wear 1">Wear Fighter equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 2">Wear Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
