--- a/trunk/datapack_development/data/html/merchant/30001.htm
+++ b/trunk/datapack_development/data/html/merchant/30001.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Lector:<br>
-May I give you a piece of advice? The most expensive equipment is not always the best. Do you think that a child could defend himself with a two-handed sword if he had one? Equipment only serves its purpose when it is suited to one's profession and condition. Now, choose what you need.<br>
-<a action="bypass -h npc_%objectId%_Buy 3000100">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3000101">Buy Mystic equipment.</a><br>
+May I offer you a word of advice? The most expensive equipment isn't necessarily the best buy for you. A child cannot handle a two-handed sword, right? You must buy equipment appropriate for your class and experience. Now, select what you need.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3000100">Wear Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3000101">Wear Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000100">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3000101">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
