--- a/trunk/datapack_development/data/html/merchant/30003-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30003-sold.htm
@@ -1,5 +1,5 @@
 <html><body>Trader Silvia:<br>
-It's annoying enough to sell, now you want me to buy, too? If you're done, be off.<br>
+I find business to be very tiresome, even when I'm doing the buying. If you're finished, hurry and go!<br>
 <a action="bypass -h npc_%objectId%_Buy 3000300">Buy Accessories</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3000301">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment</a><br>
