--- a/trunk/datapack_development/data/html/merchant/30004-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30004-bought.htm
@@ -2,5 +2,5 @@
 Thank you very much. Hope to see you often.<br>
 <a action="bypass -h npc_%objectId%_Buy 3000400">Buy Consumables and Minerals</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
