--- a/trunk/datapack_development/data/html/merchant/30135.htm
+++ b/trunk/datapack_development/data/html/merchant/30135.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Iria:<br>
-Come on in ... We have everything except what's not here. If you're going to buy, be quick about it. If you are just looking around, get out of my sight! We do not deal with weapons made by clumsy Humans, so if you're looking for that garbage you've come to the wrong place!!<br>
-<a action="bypass -h npc_%objectId%_Buy 3013500">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3013501">Buy Mystic equipment.</a><br>
+Welcome! If you don't see it, we don't have it. I can't stand browsers, so find what you want quickly or go elsewhere. We also don't sell any weapons made by those dirty Humans -- if that's what you're looking for, you've come to the wrong shop. Go somewhere else!<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3013500">Wear Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3013501">Wear Mystic equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3013500">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3013501">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
