--- a/trunk/datapack_development/data/html/merchant/30136-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30136-sold.htm
@@ -1,11 +1,9 @@
 <html><body>Trader Payne:<br>
-Thank you. I will purchase any good merchandise that you<br1>
-bring me at any time.<br>
-<a action="bypass -h npc_%objectId%_Buy 3013600">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3013601">Buy Mystic equipment.</a><br>
+Thank you. Bring something nice next time, and I will be happy to buy it from you.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013600">Wear Fighter equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013601">Wear Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
