--- a/trunk/datapack_development/data/html/merchant/30136.htm
+++ b/trunk/datapack_development/data/html/merchant/30136.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Payne:<br>
-Ho there! I bid you welcome. Here we have many things, some sure to fit your needs! Our shop is filled with fine weapons, just waiting for the touch of a brave and dashing hero like yourself. Take your time and tell me if there is anything that catches your eye.<br>
-<a action="bypass -h npc_%objectId%_Buy 3013600">Buy Fighter equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3013601">Buy Mystic equipment.</a><br>
+Welcome, welcome! We carry a wide selection of essential items for an adventurer like yourself. Our shop is filled with excellent weapons, just waiting for a brave, dashing warrior! Look around and let me know if you see something you like.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013600">Wear Fighter equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3013601">Wear Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
