--- a/trunk/datapack_development/data/html/merchant/30137.htm
+++ b/trunk/datapack_development/data/html/merchant/30137.htm
@@ -1,7 +1,7 @@
 <html><body>Trader Vollodos:<br>
-Welcome. Thank your for visiting our shop. Our store promises to always handle only fresh new items of the finest quality for you. Well then, take your time and look around! Here! A bargain! A Steal!<br>
+Welcome.  Thank you for visiting our shop.  Our store promises to always handle only fresh new items of the finest quality for you.  Well then, take your time and look around!  Here!  Look! A bargain!  A steal! <br>
 <a action="bypass -h npc_%objectId%_Buy 3013700">Buy Consumables and Minerals</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
