--- a/trunk/datapack_development/data/html/merchant/30138-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30138-bought.htm
@@ -1,8 +1,8 @@
 <html><body>Trader Minaless:<br>
-Thank you ...<br>
+Thank you. Oh ho ho ho!<br>
 <a action="bypass -h npc_%objectId%_Buy 3013800">Buy Accessories</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3013801">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
