--- a/trunk/datapack_development/data/html/merchant/30138.htm
+++ b/trunk/datapack_development/data/html/merchant/30138.htm
@@ -1,9 +1,9 @@
 <html><body>Trader Minaless:<br>
-Blessed are you by the goddess of darkness! All that you need is here, Follower of Shilen! For you have we prepared! I swear upon my heart in the name of Shilen, that the finest quality items are gathered here ...<br>
+You are blessed by the goddess of darkness! Here is everything you need. You who rose up in arms for Shilen! We have prepared these especially for you! I swear to Shilen that you will not regret shopping here. We carry only the best. Oh ho ho ho!<br>
 <a action="bypass -h npc_%objectId%_Buy 3013800">Buy Accessories</a><br>
 <a action="bypass -h npc_%objectId%_Buy 3013801">Buy Spellbooks</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
