--- a/trunk/datapack_development/data/html/merchant/30147-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30147-sold.htm
@@ -1,11 +1,9 @@
 <html><body>Trader Unoren:<br>
-Thank you, my friend. Your item will be used by a<br1>
-brother-in-arms.<br>
-<a action="bypass -h npc_%objectId%_Buy 3014700">Buy Fighter equipment</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3014701">Buy Mystic equipment</a><br>
+Many thanks, friend! The items we bought from you will go to good use.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3014700">Try on Fighter Equipment</a><br>
 <a action="bypass -h npc_%objectId%_Wear 3014701">Try on Mystic Equipment</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">View the information about the lord and the tax rate of the manor.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
