--- a/trunk/datapack_development/data/html/merchant/30148-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30148-sold.htm
@@ -1,12 +1,9 @@
 <html><body>Trader Ariel:<br>
-Thank you. Feel free to bring me unnecessary or unused<br1>
-items anytime. I will buy them from you according to my<br1>
-needs.<br>
-<a action="bypass -h npc_%objectId%_Buy 3014800">Buy Fighter equipment</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3014801">Buy Mystic equipment.</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3014800">Wear Fighter Equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3014801">Wear Mystic Equipment."</a><br>
+Thank you! If you have items you no longer need, bring them to me any time. I will purchase whatever I can.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3014800">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3014801">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
