--- a/trunk/datapack_development/data/html/merchant/30148.htm
+++ b/trunk/datapack_development/data/html/merchant/30148.htm
@@ -1,11 +1,10 @@
 <html><body>Trader Ariel:<br>
-Check out my vast array of armor and shields! All of my armor is top quality! I've got just what you need to keep your life and retain your dignity at the same time!<br>
-<a action="bypass -h npc_%objectId%_Buy 3014800">"I want to buy Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3014801">"I want to buy Wizard equipment."</a><br>
+Here you can buy magnificent armor, shields and helmets all carefully crafted to protect both your life and your dignity. Of course, everything we sell is only of the highest quality. You won't be disappointed!<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3014800">"I want to try on Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3014801">"I want to try on Wizard equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3014800">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3014801">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
