--- a/trunk/datapack_development/data/html/merchant/30150-bought.htm
+++ b/trunk/datapack_development/data/html/merchant/30150-bought.htm
@@ -1,6 +1,6 @@
 <html><body>Trader Herbiel:<br>
 Thank you. I hope my potion give you strength.<br>
-<a action="bypass -h npc_%objectId%_Buy 3015000">Buy Consumables and Minerals</a><br>
+<a action="bypass -h npc_%objectId%_Buy 3015000">Buy</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
