--- a/trunk/datapack_development/data/html/merchant/30150-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30150-sold.htm
@@ -2,7 +2,7 @@
 Thank you. Come to me when you have need of funds,<br1>
 and I will always be happy to purchase valuable goods<br1>
 from you at a fair price.<br>
-<a action="bypass -h npc_%objectId%_Buy 3015000">Buy Consumables and Minerals</a><br>
+<a action="bypass -h npc_%objectId%_Buy 3015000">Buy</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">See the Lord and get the tax rate information.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 </body></html>
