--- a/trunk/datapack_development/data/html/merchant/30516.htm
+++ b/trunk/datapack_development/data/html/merchant/30516.htm
@@ -1,13 +1,15 @@
 <html><body>Trader Reep:<br>
-Hello! I am Reep, the manager of the first Golden Wheel shop. I am always at your service.<br>
-When it comes to items, high price doesn't guarantee good quality, even though you shouldn't look for whatever's cheap. Correlation of price and quality? Of course, it's important. But the most important thing is the critical eye, to find appropriate items for different applications.<br>
-I am sure your critical eye will value these displayed items.<br>
-<a action="bypass -h npc_%objectId%_Buy 3051600">"I want to buy Warrior equipment."</a><br1>
-<a action="bypass -h npc_%objectId%_Buy 3051601">"I want to buy Wizard equipment."</a><br>
+Trader Reep:<br>
+Hello, my name is Reep -- I'm the manager here at the Golden Wheel, a shop dedicated providing you with excellent service and selection.<br>
+Always happy to see a new customer!<br>
+Please browse our wide selection of items.<br>
+Remember, more expensive items are not necessarily better than cheaper ones. How can you tell? Well, every adventurer has his or her methods, of course. But the most important thing is your judgement and experience about whether the item will match your needs.<br>
+Heh, can you tell the true value of the items displayed here?<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3051600">"I want to try on Warrior equipment."</a><br1>
-<a action="bypass -h npc_%objectId%_Wear 3051601">"I want to try on Wizard equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3051600">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3051601">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the Lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
