--- a/trunk/datapack_development/data/html/merchant/30518.htm
+++ b/trunk/datapack_development/data/html/merchant/30518.htm
@@ -1,9 +1,10 @@
 <html><body>Trader Garita:<br>
-Welcome to the best shop in the Dwarven Kingdom. Here you'll see what amazing items can be created when high technology is combined with superior craftsmanship. These items are the pride of our Dwarven craftsmen, the products of those who have mastered the skills of the ancient giants.<br>
-Buy what you like, but do so quickly, since we've sold all our items except for these...<br>
-<a action="bypass -h npc_%objectId%_Buy 3051800">"I want to buy an accessory."</a><br>
+Please come in...<br>
+Welcome to the best shop in the Dwarven Kingdom! You can see the emphasis we put on technology and craftsmanship here. As the heirs of the knowledge of the ancient Giants, we offer items you cannot find elsewhere.<br>
+We have only a few left, so act quickly if you want one...<br>
+<a action="bypass -h npc_%objectId%_Buy 3051800">Buy Accessories.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the Lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
 </body></html>
