--- a/trunk/datapack_development/data/html/merchant/30558.htm
+++ b/trunk/datapack_development/data/html/merchant/30558.htm
@@ -1,12 +1,11 @@
 <html><body>Trader Jakal:<br>
-For the honor of the eternal flame! Greetings, brothers of fire!<br>
-What do you need? Choose what you like! All of our merchandise is top-rate! You should stock up if you're planning on doing any exploring... Starting on an adventure wothout proper preparation can lead to desaster! There's no reason for a modern Orc to be threatened by anything! Hahaha!!<br>
-<a action="bypass -h npc_%objectId%_Buy 3055800">"I want to buy Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3055801">"I want to buy Wizard equipment."</a><br>
+For the eternal glory of the flame! Hello, brother of the flame!<br>
+How may I serve you? Please survey my wares. You'll find that I carry nothing worthless in my shop. Just tell me whatever you need. There is nothing that I cannot obtain! It's an old maxim that adventure requires preparation. Without it, defeat and shame await you! Even we, the noble Orcs, may be harmed by the lowly beasts of the field unless we are prepared. Ha ha ha!<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055800">"I want to try on Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055801">"I want to try on Wizard equipment."</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055800">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055801">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
