--- a/trunk/datapack_development/data/html/merchant/30559.htm
+++ b/trunk/datapack_development/data/html/merchant/30559.htm
@@ -1,12 +1,11 @@
 <html><body>Trader Kunai:<br>
-For the honor of the eternal flame! Greetings, brothers of fire!<br>
-My name is Kunai! You look like you could use some new weapons! I happen to have just gotten a shipment of the last Dwarven weapons, and I hate to say it, but they're the highest-quality I've ever seen! I despise the Dwarves more than most, but I can't quarrel with their craftmanship! Crafty little devils, they are! Besides, if I didn't sell them, the Humans or the Elvel would!<br>
-<a action="bypass -h npc_%objectId%_Buy 3055900">"I want to buy Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3055901">"I want to buy Wizard equipment."</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055900">"I want to try on Warrior equipment."</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3055901">"I want to try on Wizard equipment."</a><br>
+For the eternal glory of the flame! Greetings, brother of the flame.<br>
+I am Kunai the weapons trader. Supplied by the Dwarves, I guarantee you that the quality of our items is without peer. True, the Dwarves deserve to be pummeled and stomped -- but they make good items, and if we don't sell their wares the Elves and Humans will. Ah, the hardships we must bear for the sake of our tribe's eternal glory! Have a look -- you won't regret it.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055900">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3055901">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
