--- a/trunk/datapack_development/data/html/merchant/30560-sold.htm
+++ b/trunk/datapack_development/data/html/merchant/30560-sold.htm
@@ -1,9 +1,9 @@
 <html><body>Trader Uska:<br>
-Your items are interesting... Come back to see me!<br>
-<font color="LEVEL">Tejakar Pa'agrio!</font><br>
-<a action="bypass -h npc_%objectId%_Buy 3056000">"I want to buy an acessory."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3056001">"I want to buy an amulet."</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
+I'll gladly buy such fine items -- stop by again!<br>
+<font color="LEVEL"> Dejakar Pa'agrio!<br>
+<a action="bypass -h npc_%objectId%_Buy 3056000">Buy Accessories.</a><br>
+<a action="bypass -h npc_%objectId%_Buy 3056001">Buy an Amulet.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell ">Sell</a><br>
 <a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
 </body></html>
