--- a/trunk/datapack_development/data/html/merchant/30560.htm
+++ b/trunk/datapack_development/data/html/merchant/30560.htm
@@ -1,10 +1,10 @@
 <html><body>Trader Uska:<br>
-For the honor of the eternal flame! Greetings, brothers of fire!<br>
-Welcome to my store! I'll get right on the point! What do you want? Look around, pick out what you want, pay for it and get out! I don't have any time to waste! I've got to get back to my training!<br>
-<a action="bypass -h npc_%objectId%_Buy 3056000">"I want to buy an acessory."</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3056001">Buy the amulet</a><br>
-<a action="bypass -h npc_%objectId%_exc_multisell 003">"I want to exchange equipment."</a><br>
+For the eternal glory of the flame! Brother of the flame, greetings!<br>
+My name is Uska! I am honored to meet you, ha ha! I'm not a man to beat around the bush. I'll come right to the point. Do you need an item? Then have a look at my wares! I won't waste your time if you don't waste mine, eh? I know how important keeping to your training regimen is, even in peacetime. Look sharp and let's do business!<br>
+<a action="bypass -h npc_%objectId%_Buy 3056000">Buy Accessories.</a><br>
+<a action="bypass -h npc_%objectId%_Buy 3056001">Buy an Amulet.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">"Who is the lord of the manor and what is the tax rate?"</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a><br>
 </body></html>
