--- a/trunk/datapack_development/data/html/merchant/32164.htm
+++ b/trunk/datapack_development/data/html/merchant/32164.htm
@@ -1,13 +1,13 @@
 <html><body>Trader Erinu:<br>
 Welcome!<br>
-An adventurer should be able to organize his equipment at any time. Back in the old days, I would have even given away some to encourage aspiring adventurers. But these days, there are too many adventurers, and with so much equipment that must be imported from overseas, that's just not feasible.<br>
-But the most important thing is for you to choose equipment that's right for you and your level.<br>Here, pick and choose!<br>
-<a action="bypass -h npc_%objectId%_Buy 3216400">Buy warrior equip.</a><br>
-<a action="bypass -h npc_%objectId%_Buy 3216401">Buy magician equip.</a><br>
+An adventurer needs all sorts of necessary equipment. In the old days, I would've given you some freebies to help you out, but with so many adventurers nowadays and because I have to import the equipment from overseas, I just can't afford to do it anymore. <br>
+Just remember to buy and use equipment suitable for your abilities.<br>
+See anything you like?<br>
+<a action="bypass -h npc_%objectId%_Chat 1">Buy Equipment.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3216400">Try the warrior equip on.</a><br>
-<a action="bypass -h npc_%objectId%_Wear 3216401">Try the magician equip on.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3216400">Try on Fighter equipment.</a><br>
+<a action="bypass -h npc_%objectId%_Wear 3216401">Try on Mystic equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell.</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">View information on the local lord and manor tax rate.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest.</a>
 </body></html>
