--- a/trunk/datapack_development/data/html/merchant/32166.htm
+++ b/trunk/datapack_development/data/html/merchant/32166.htm
@@ -1,9 +1,9 @@
 <html><body>Trader Trevor:<br>
-Welcome, welcome! May I help you? We have all the accessories you might need for any adventure!<br>
-If you're going on a journey, don't you want to be equipped with only the best?<br>
-<a action="bypass -h npc_%objectId%_Buy 3216600">Buy accessories.</a><br>
+Welcome, how can I help you? We have every accessory you might need!<br>
+If you're planning a long journey, don't leave without something from our shop.<br>
+<a action="bypass -h npc_%objectId%_Buy 3216600">Buy Accessories.</a><br>
 <a action="bypass -h npc_%objectId%_exc_multisell 003">Exchange equipment.</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell.</a><br>
-<a action="bypass -h npc_%objectId%_TerritoryStatus">View information on the local lord and manor tax rate.</a><br>
+<a action="bypass -h npc_%objectId%_TerritoryStatus">Ask about the local lord and tax rate.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest.</a>
 </body></html>
