--- a/trunk/datapack_development/data/html/admin/skills/DarkElf/DE_GhostHunter.htm
+++ b/trunk/datapack_development/data/html/admin/skills/DarkElf/DE_GhostHunter.htm
@@ -17,6 +17,6 @@
 <tr><td>Bluff (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 358 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td>Focus Skill Mastery (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 334 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td>Focus Death (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 355 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
-<tr><td>Focus Chance (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 356 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td>Focus Power (max 1)</td><td><button value="Add" action="bypass -h admin_add_skill 357 $level" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </table></center></font>
 </body></html>
