--- a/trunk/datapack_development/data/html/seven_signs/rift/GuardianOfBorder.htm
+++ b/trunk/datapack_development/data/html/seven_signs/rift/GuardianOfBorder.htm
@@ -1,6 +1,5 @@
 <html><body>Border Guard:<br><br>
-What do you think this place is for?<br>
-This place is for intrepid hunters to reap the benefits of their labors.<br>
-<a action="bypass -h npc_%objectId%_Chat 1">"I want to give up."</a>
+We'll trade our lives for yours if necessary.<br>
+<a action="bypass -h npc_%objectId%_Chat 1">"I give up."</a>
 <a action="bypass -h npc_%objectId%_ChangeRiftRoom">Use the chance card</a><br>
 </body></html>
