--- a/trunk/datapack_development/data/html/mods/TvTEventParticipation.htm
+++ b/trunk/datapack_development/data/html/mods/TvTEventParticipation.htm
@@ -1,7 +1,6 @@
 <html><title>TvT Event</title><body>
 Registration for TvT Event:<br><br><center>
-%team1name%&nbsp;&nbsp;&nbsp;&nbsp;(%team1playercount% players in)<br1>
-%team2name%&nbsp;&nbsp;&nbsp;&nbsp;(%team2playercount% players in)<br>
+%playercount% players in<br>
 <button value="Participate" action="bypass -h npc_%objectId%_tvt_event_participation" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
 <button value="Close" action="bypass -h npc_%objectId%_Close" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
 </center></body></html>
