HTM: Some html fixes by lastsin.

--- a/trunk/datapack_development/data/html/default/32327.htm
+++ b/trunk/datapack_development/data/html/default/32327.htm
@@ -3,5 +3,5 @@ Are you tired from your long journey?<br>
 My job is to help you during these violent, seemingly endless fights against evil!<br>
 Thanks to your courage and skill in dealing with these monsters, our village is still safe and whole.<br>
 <a action="bypass -h npc_%objectId%_Link default/SupportMagic.htm">View list of beneficial magic available to receive.</a><br>
-Receive the Blessing of Protection.
+<a action="bypass -h npc_%objectId%_Link default/BlessingOfProtection.htm">Receive blessing of protection.</a>
 </body></html>
