--- a/trunk/datapack_development/data/html/admin/tele/raid.htm
+++ b/trunk/datapack_development/data/html/admin/tele/raid.htm
@@ -8,5 +8,5 @@
 <a action="bypass -h admin_help tele/raid/raid_60.htm">RaidBoss (Lvl. 60-69)</a><br1>
 <a action="bypass -h admin_help tele/raid/raid_70.htm">RaidBoss (Lvl. 70-79)</a><br1>
 <a action="bypass -h admin_help tele/raid/raid_80.htm">RaidBoss (Lvl. 80-89)</a><br1>
-<a action="bypass -h admin_help tele/raid/GrandBoss.htm">GrandBoss</a>
+<a action="bypass -h admin_help tele/raid/GrandBoss.htm">GrandBoss</a><br1>
 <a action="bypass -h admin_help tele/raid/raid_special.htm">Special RaidBoss</a></font></body></html>
