--- a/trunk/datapack_development/data/html/admin/tele/raid/GrandBoss.htm
+++ b/trunk/datapack_development/data/html/admin/tele/raid/GrandBoss.htm
@@ -7,7 +7,7 @@
 <a action="bypass -h admin_move_to 115213 16623 10080 ">Baium (75)</a><br1>
 <a action="bypass -h admin_move_to 185708 114298 -8221 ">Antharas (79)</a><br1>
 <a action="bypass -h admin_move_to 213896 -115436 -1644 ">Valakas (85)</a><br1>
-<a action="bypass -h admin_move_to 174238 -89532 -5192 ">Frintezza/Scarlet van Halisha (85)</a></font>
-Beleth (not done yet)
-Baylor (not done yet)
+<a action="bypass -h admin_move_to 174238 -89532 -5192 ">Frintezza/Scarlet van Halisha (85)</a><br1>
+Beleth (not done yet)<br1>
+Baylor (not done yet)</font>
 </body></html>
