--- a/trunk/datapack_development/data/html/admin/tele/raid/raid_special.htm
+++ b/trunk/datapack_development/data/html/admin/tele/raid/raid_special.htm
@@ -9,5 +9,5 @@
 <a action="bypass -h admin_move_to 26528 -8244 -20">Sailren (80)</a><br>
 <a action="bypass -h admin_move_to 19897 -9087 -2781 ">Tyrannosaurus (87)</a><br1>
 <a action="bypass -h admin_move_to 22827 -14698 -3080 ">Tyrannosaurus (87)</a><br1>
-<a action="bypass -h admin_move_to 26174 -17134 -2747 ">Tyrannosaurus (87)</a>
+<a action="bypass -h admin_move_to 26174 -17134 -2747 ">Tyrannosaurus (87)</a></font>
 </body></html>
