--- a/trunk/datapack_development/data/html/admin/charinfo.htm
+++ b/trunk/datapack_development/data/html/admin/charinfo.htm
@@ -9,8 +9,8 @@
 <tr>
 <td><button value="Go To" action="bypass -h admin_goto_char_menu %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Kick" action="bypass -h admin_kick_menu %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ban Acc" action="bypass -h admin_ban_menu %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ban Chr" action="bypass -h admin_changelvl %name% -100" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ban Acc" action="bypass -h admin_ban_acc %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ban Chr" action="bypass -h admin_ban_char %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
 <td><button value="Recall" action="bypass -h admin_recall_char_menu %name%" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Skills" action="bypass -h admin_show_skills" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
