--- a/trunk/datapack_development/data/html/admin/classic_menu.htm
+++ b/trunk/datapack_development/data/html/admin/classic_menu.htm
@@ -30,11 +30,11 @@
 <button value="Open" action="bypass -h admin_open_menu" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr><br><tr><td>
 <button value="Revis" action="bypass -h admin_vis" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
 <button value="Delete" action="bypass -h admin_delete" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
-<button value="Ban" action="bypass -h admin_ban $qbox" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
+<button value="Ban" action="bypass -h admin_ban_char $qbox" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
 <button value="Close" action="bypass -h admin_close" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 </table><br><table width=200><tr><td>
-<button value="Chat Ban" action="bypass -h admin_banchat $qbox" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
-<button value="Chat UnBan" action="bypass -h admin_unbanchat $qbox" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button value="Chat Ban" action="bypass -h admin_ban_chat $qbox" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td><td>
+<button value="Chat UnBan" action="bypass -h admin_unban_chat $qbox" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
 </td></tr></table></center><center><table><br>
 <tr><td><button value="Day" action="bypass -h admin_atmosphere_menu sky day" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Night" action="bypass -h admin_atmosphere_menu sky night" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
