--- a/trunk/datapack_development/data/html/admin/main_menu.htm
+++ b/trunk/datapack_development/data/html/admin/main_menu.htm
@@ -25,8 +25,8 @@
 <td><button value="Karma" action="bypass -h admin_setkarma $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="NoKarma" action="bypass -h admin_nokarma" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="ChatBan" action="bypass -h admin_banchat $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="ChtUnBan" action="bypass -h admin_unbanchat $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="ChatBan" action="bypass -h admin_ban_chat $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="ChtUnBan" action="bypass -h admin_unban_chat $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Jail" action="bypass -h admin_jail $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Jail Out" action="bypass -h admin_unjail $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
