--- a/trunk/datapack_development/data/html/admin/accountinfo.htm
+++ b/trunk/datapack_development/data/html/admin/accountinfo.htm
@@ -12,8 +12,8 @@
 </tr></table><br>
 <table width=270>
 <tr>
-<td><button value="Ban Account" action="bypass -h admin_ban %account%" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Reset Account" action="bypass -h admin_unban %account%" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ban Account" action="bypass -h admin_ban_acc %account%" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Reset Account" action="bypass -h admin_unban_acc %account%" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Custom Level" action="bypass -h admin_account_level %account% $qbox" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>	
 <td><button value="TODO: " action="bypass -h admin_show_characters 0" width=90 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
