--- a/trunk/datapack_development/data/html/admin/charmanage.htm
+++ b/trunk/datapack_development/data/html/admin/charmanage.htm
@@ -14,14 +14,14 @@
 <table width=260><tr>
 <td><button value="Go" action="bypass -h admin_goto_char_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Kick" action="bypass -h admin_kick_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ban Chr" action="bypass -h admin_changelvl $qbox -100" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ban Acc" action="bypass -h admin_ban_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ban Chr" action="bypass -h admin_ban_char $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Ban Acc" action="bypass -h admin_ban_acc $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Jail" action="bypass -h admin_jail $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
 <td><button value="Get" action="bypass -h admin_recall_char_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Kill" action="bypass -h admin_kill_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="UnbanChr" action="bypass -h admin_changelvl $qbox 0" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unban Ac" action="bypass -h admin_unban_menu $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="UnbanChr" action="bypass -h admin_unban_char $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="UnbanAcc" action="bypass -h admin_unban_acc $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="UnJail" action="bypass -h admin_unjail $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
