--- a/trunk/datapack_development/data/html/admin/help/gmcommands2.htm
+++ b/trunk/datapack_development/data/html/admin/help/gmcommands2.htm
@@ -3,9 +3,13 @@
 <tr><td width 90>GM commands page:</td><td><a action="bypass -h admin_help help/gmcommands.htm">1</a></td><td>2</td><td><a action="bypass -h admin_help help/gmcommands3.htm">3</a></td></tr>
 </table><br>
 <font color="FF0000">These are the available GM commands in game.</font><br><br>
-<font color="LEVEL">//changelvl</font> - Changes a targetted players access level.<br><font color="FF9933">Usage: //changelvl Access_level_number </font><br>
-<font color="LEVEL">//ban</font> - Used to kick and ban a named players account.<br><font color="FF9933">Usage: //ban kadar </font><br>
-<font color="LEVEL">//unban</font> - Used to unban a named players account.<br><font color="FF9933">Usage: //unban kadar </font><br>
+<font color="LEVEL">//changelvl</font> - Changes a targeted players access level.<br><font color="FF9933">Usage: //changelvl Access_level_number </font><br>
+<font color="LEVEL">//ban_acc</font> - Used to kick and ban a named players account.<br><font color="FF9933">Usage: //ban_acc kadar </font><br>
+<font color="LEVEL">//ban_char</font> - Used to kick and ban a named character.<br><font color="FF9933">Usage: //ban_char kadar </font><br>
+<font color="LEVEL">//ban_chat</font> - Mutes a player<br><font color="FF9933">Usage: //ban_chat kadar [duration]</font><br>
+<font color="LEVEL">//unban_acc</font> - Used to unban a named players account.<br><font color="FF9933">Usage: //unban_acc kadar </font><br>
+<font color="LEVEL">//unban_char</font> - Used to unban a named character.<br><font color="FF9933">Usage: //unban_char kadar </font><br>
+<font color="LEVEL">//unban_chat</font> - Unmutes a player<br><font color="FF9933">Usage: //unban_chat kadar </font><br>
 <font color="LEVEL">//kick</font> - Used to disconnect named player.<br><font color="FF9933">Usage: //kick kadar </font><br>
 <font color="LEVEL">//ride_wyvern</font> - Command used to summon and ride a wyvern.<br>
 <font color="LEVEL">//unride_wyvern</font> - Command to dismount and unsummon a wyvern.<br>
@@ -50,8 +54,6 @@
 <font color="LEVEL">//nokarma</font> - Removes karma from target player<br>
 <font color="LEVEL">//setkarma value</font> - Sets karma of target player to value<br>
 <font color="LEVEL">//setew value</font> - Sets enchantment of target player currently equipped weapon to value<br><font color="FF9933">Usage: //setew 9999</font><br>
-<font color="LEVEL">//banchat</font> - Mutes a player<br><font color="FF9933">Usage: //banchat kadar </font><br>
-<font color="LEVEL">//unbanchat</font> - Unmutes a player<br><font color="FF9933">Usage: //unbanchat kadar </font><br>
 <font color="LEVEL">//polymorph character npc id </font><br>
 <font color="LEVEL">//polymorph item id to poly target into id|</font><br>
 <font color="LEVEL">//polyself &lt;npc id&gt;</font> - Used to polymorph yourself into a mob<br>
