HTM: To match [L2727] thanks Xanewok.

--- a/trunk/datapack_development/data/html/admin/charedit.htm
+++ b/trunk/datapack_development/data/html/admin/charedit.htm
@@ -13,7 +13,7 @@
 </table>
 <br>
 <table width=270>
-<tr><td width=140>Name:</td><td><edit width=80 var="name"></td><td><button value="Save" action="bypass -h admin_setname $name" height=15 width=45 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
+<tr><td width=140>Name:</td><td><edit width=80 var="name"></td><td><button value="Save" action="bypass -h admin_changename $name" height=15 width=45 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td width=140>Title:</td><td><edit width=80 var="title"></td><td><button value="Save" action="bypass -h admin_settitle $title" height=15 width=45 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td width=140>Name color:</td><td><edit width=80 var="color"></td><td><button value="Set" action="bypass -h admin_setcolor $color" height=15 width=45 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
 <tr><td width=140>Recommendations:</td><td><edit width=80 var="reco"></td><td><button value="Save" action="bypass -h admin_rec $reco" height=15 width=45 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
