abnormal effects update

--- a/trunk/datapack_development/data/html/admin/abnormal.htm
+++ b/trunk/datapack_development/data/html/admin/abnormal.htm
@@ -17,7 +17,7 @@
 <td><button value="Unk4" action="bypass -h admin_abnormal_menu 8 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
 <td><button value="Unk5" action="bypass -h admin_abnormal_menu 10 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unk6" action="bypass -h admin_abnormal_menu 20 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Fear" action="bypass -h admin_abnormal_menu 20 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Stun" action="bypass -h admin_abnormal_menu 40 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Sleep" action="bypass -h admin_abnormal_menu 80 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
@@ -41,9 +41,11 @@
 <td><button value="Imprisio2" action="bypass -h admin_abnormal_menu 400000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="MgcCircle" action="bypass -h admin_abnormal_menu 800000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
-<td><button value="Unk25" action="bypass -h admin_abnormal_menu 1000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Unk26" action="bypass -h admin_abnormal_menu 2000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="IceFreeze" action="bypass -h admin_abnormal_menu 1000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="EarthQuake" action="bypass -h admin_abnormal_menu 2000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Unk27" action="bypass -h admin_abnormal_menu 4000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Unk28" action="bypass -h admin_abnormal_menu 8000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr><tr>
+<td><button value="Vitality" action="bypass -h admin_abnormal_menu 10000000 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table></body></html>
