small gm shop update

--- a/trunk/datapack_development/data/html/admin/gmshop/pets.htm
+++ b/trunk/datapack_development/data/html/admin/gmshop/pets.htm
@@ -1,16 +1,17 @@
-<html><body>
+<html><title>Pet Items</title><body>
 <table width=260>
 <tr>
 <td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td width=180><center>GM Shop Menu - Pets</center></td>
 <td width=40><button value="Back" action="bypass -h admin_help gmshops.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
-</table><br>
+</table><br><br><br>
 <center>
 <table width=230>
-<tr><td><a action="bypass -h admin_help gmshop/petweapon.htm"><font color="LEVEL">Pet Weapons</font></a></td></tr>
-<tr><td><a action="bypass -h admin_help gmshop/petarmor.htm"><font color="LEVEL">Pet Armor</font></a></td></tr>
-<tr><td><a action="bypass -h admin_buy 3003"><font color="LEVEL">Pet Collars and Consumables</font></a></td></tr>
+<tr><td><a action="bypass -h admin_help gmshop/petweapon.htm"><font color="LEVEL">Pet Weapons</font></a><br></td></tr>
+<tr><td><a action="bypass -h admin_help gmshop/petarmor.htm"><font color="LEVEL">Pet Armors</font></a><br></td></tr><br>
+<tr><td><a action="bypass -h admin_buy 3003"><font color="LEVEL">Pet Collars and Exchange Tickets</font></a><br></td></tr><br>
+<tr><td><a action="bypass -h admin_buy 3004"><font color="LEVEL">Pet Consumables</font></a></td></tr>
 </table>
 </center>
 </body></html>
