--- a/trunk/datapack_development/data/html/admin/gmshop/petarmor.htm
+++ b/trunk/datapack_development/data/html/admin/gmshop/petarmor.htm
@@ -1,4 +1,4 @@
-<html><body>
+<html><title>Pet Armors</title><body>
 <table width=260>
 <tr>
 <td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
