HTM: Minor fix in game_menu.htm

--- a/trunk/datapack_development/data/html/admin/game_menu.htm
+++ b/trunk/datapack_development/data/html/admin/game_menu.htm
@@ -17,7 +17,7 @@
 <table width=240><tr>
 <td><button value="Manage" action="bypass -h admin_char_manage" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="List" action="bypass -h admin_show_characters 0" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="SetName" action="bypass -h admin_setname $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="ChangeName" action="bypass -h admin_changename $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="SetTitle" action="bypass -h admin_settitle $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr></table><br>
 Clan related:
