foreman update, require [L2923]

--- a/trunk/datapack_development/data/html/fortress/36317-d.htm
+++ b/trunk/datapack_development/data/html/fortress/36317-d.htm
@@ -1,12 +1,5 @@
-<html><body>%npcname%:<br>
-What is your command?
-<br>
-<center>
-<a action="bypass -h npc_%objectId%_operate_door 1 23160001 23160008">Open the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23160001 23160008">Close the Outer Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23160004 23160005 23160006 23160007">Open the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23160004 23160005 23160006 23160007">Close the Inner Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 1 23160001 23160008 23160004 23160005 23160006 23160007 23160002 23160003">Open All Fort Gates</a><br>
-<a action="bypass -h npc_%objectId%_operate_door 0 23160001 23160008 23160004 23160005 23160006 23160007 23160002 23160003">Close All Fort Gates</a>
-</center>
-</body></html>
+<html><body><center><br><br>
+<a action="bypass -h npc_%objectId%_operate_door 1 23160001 23160008 23160004 23160005 23160006 23160007 23160002 23160003">Open the gate</a><br>
+<a action="bypass -h npc_%objectId%_operate_door 0 23160001 23160008 23160004 23160005 23160006 23160007 23160002 23160003">Close the gate</a><br>
+<action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return</a>
+</center></body></html>
