--- a/trunk/datapack_development/data/html/fortress/foreman-manage.htm
+++ b/trunk/datapack_development/data/html/fortress/foreman-manage.htm
@@ -1,10 +1,8 @@
-<html><body>
-A Fortress has the following functions:<br><br>
-<center>
-<a action="bypass -h npc_%objectId%_banish_foreigner">Dismiss outsiders.</a><br>
-<a action="bypass -h npc_%objectId%_operate_door">Open and close the fort gate.</a><br>
-<a action="bypass -h npc_%objectId%_manage_siege_defender">Manage the siege functions.</a><br>
-<a action="bypass -h npc_%objectId%_manage">Manage additional functions.</a><br>
-<a action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Return.</a>
-</center>
+<html><body><br>
+<font color="LEVEL">[Manage Fortress]</font><br><br>
+<CENTER>
+<button value="Recovery" action="bypass -h npc_%objectId%_manage recovery" width=80 height=27 back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DF"><br>
+<button value="Other" action="bypass -h npc_%objectId%_manage other" width=80 height=27 back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DF"><br>
+<button value="Main Screen" bypass -h npc_%objectId%_Link fortress/foreman.htm" width=80 height=27 back="L2UI_CT1.Button_DF_Down" fore="L2UI_CT1.Button_DF">
+</CENTER>
 </body></html>
