--- a/trunk/datapack_development/data/html/fortress/foreman-report.htm
+++ b/trunk/datapack_development/data/html/fortress/foreman-report.htm
@@ -1,7 +1,6 @@
 <html><body>
-Greetings, Lord %clanleadername%!<br>
-Currently <font color="00FFFF">%fortname%</font> Fort is in a peaceful state under the rule of <font color="00FFFF">%clanname%</font> clan.
-This is all thanks to your grace and benevolence, Lord <font color="00FFFF">%clanleadername%</font>!<br>
+Considering the current status of our defenses, we can safely protect this fortress from enemy attack for <font color="00FFFF">%hr%hour %min%minute</font>.<br><br>
+There are currently no alliances with neighboring castles, so defensive mode cannot be activated.<br>
 <center><br>
-<a action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Back</a></center>
+<a action="bypass -h npc_%objectId%_Link fortress/foreman.htm">Back.</a></center>
 </body></html>
