--- a/trunk/datapack_development/data/html/fortress/foreman.htm
+++ b/trunk/datapack_development/data/html/fortress/foreman.htm
@@ -1,8 +1,10 @@
 <html><body>
-Greetings!
-How do you do? How may I serve you today?<center><br><br>
-<a action="bypass -h npc_%objectId%_receive_report">Receive a Report.</a><br>
-<a action="bypass -h npc_%objectId%_manage_functions">Manage Fort Functions.</a><br>
+Whoever owns this fortress must safeguard the territory from monsters or enemy clan's. It is a task that requires constant vigilance -- conflict may arise at any time from any quarter!<center><br><br>
+<a action="bypass -h npc_%objectId%_receive_report">Receive Report.</a><br>
+<a action="bypass -h npc_%objectId%_operate_door">Open/Close Door.</a><br>
+<a action="bypass -h npc_%objectId%_expel">Expel Outsiders.</a><br>
+<a action="bypass -h npc_%objectId%_functions">Fortress Functions.</a><br>
+<a action="bypass -h npc_%objectId%_manage_vault">Clan Warehouse.</a><br>
+<a action="bypass -h npc_%objectId%_manage">Fortress Management.</a><br>
 <a action="bypass -h npc_%objectId%_functions">Use Fort Functions.</a><br>
-<a action="bypass -h npc_%objectId%_list_siege_clans">View Siege Info.</a><br>
 </body></html>
