typo fix, thx charus

--- a/trunk/datapack_development/data/html/olympiad/noble_nopoints.htm
+++ b/trunk/datapack_development/data/html/olympiad/noble_nopoints.htm
@@ -1,4 +1,4 @@
 <html><body>Grand Olympiad Manager:<br>
 I'm sorry. You do not have enough points to obtain Olympiad Tokens. Better luck next time.<br>
-<a action="bypass -h npc_%objectId%_OlympiadDesc 2a">Return</a>
+2.<a action="bypass -h npc_%objectId%_OlympiadDesc 4a">Return</a>
 </body></html>
